<resources>
    <string name="app_name">Inshot Video Download</string>
    <string name="tab">Tab</string>
    <string name="tabs">Tabs</string>
    <string name="progress">Progress</string>
    <string name="finished">Finished</string>
    <string name="facebook">Video Downloader</string>
    <string name="downloader">Trình tải xuống</string>
    <string name="txt_des_splash">Ứng dụng được phát triển  n bởi Merry Blue</string>
    <string name="loading_ads_text">Loading ads...</string>
    <string name="txt_download_type">Loại tải xuống</string>
    <string name="txt_description_his_nodata">Bạn không có lịch sử tải xuống</string>
    <string name="txt_paste_the_link">Dán liên kết</string>
    <string name="txt_paste">Dán</string>
    <string name="checlink">Kiểm tra liên kết</string>
    <string name="txt_information">Thông tin</string>
    <string name="txt_coppy">Sao chép</string>
    <string name="txt_nodata_information">Chưa có thông tin, vui lòng dán link vào ô bên trên để tải về</string>
    <string name="txt_downloading_">Đang tải xuống ...</string>
    <string name="txt_result_download_success">Thành công</string>
    <string name="select_language">Chọn ngôn ngữ</string>
    <string name="next">Tiếp theo</string>
    <string name="txt_save">Lưu lại</string>
    <string name="txt_des_abount_app">Mọi quyền được bảo lưu Tải xuống Video Online app cho phép bạn tải xuống video từ Facebook trong khi duyệt trực tiếp đến thiết bị của bạn và vẫn chiếm bộ nhớ tối thiểu của bạn. Phát video sau đó và chia sẻ video qua Whatsapp hoặc Gmail với bạn bè của bạn nếu bạn muốn. Nếu bạn thích ứng dụng này, hãy chia sẻ nó với bạn bè của bạn. Ứng dụng này không liên kết với tổ chức Facebook dưới mọi hình thức. Mọi nội dung tải xuống hoặc tải lên lại FB mà trái phép và / hoặc vi phạm quyền sở hữu trí tuệ là trách nhiệm duy nhất thuộc về người dùng.</string>
    <string name="txt_on_top">Trên đầu trang</string>
    <string name="skip">Nhảy</string>
    <string name="onboard_title_1">Đơn giản để lưu Video:</string>
    <string name="onboard_content_1">Thật dễ dàng để lưu các câu chuyện thú vị trên Video, cập nhật trạng thái, nguồn cấp tin tức và hơn thế nữa chỉ với một lần nhấn.</string>
    <string name="txt_download">Tải xuống</string>
    <string name="txt_language">Ngôn ngữ</string>
    <string name="privacy">Sự riêng tư</string>
    <string name="about_app">Giới thiệu về ứng dụng</string>
</resources>