<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
<!--        app:txt_toolbar="@string/setting" />-->
    <include layout="@layout/toolbar"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_download"
        android:drawablePadding="@dimen/_21sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_14sdp"
        android:text="@string/txt_download"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_language"
        android:drawablePadding="@dimen/_21sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_14sdp"
        android:text="@string/txt_language"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_privacy"
        android:drawablePadding="@dimen/_21sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_14sdp"
        android:text="@string/privacy"
        app:drawableEndCompat="@drawable/ic_arrow_right" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_about_app"
        android:drawablePadding="@dimen/_21sdp"
        android:gravity="center_vertical"
        android:padding="@dimen/_14sdp"
        android:text="@string/about_app"
        app:drawableEndCompat="@drawable/ic_arrow_right" />
</LinearLayout>
