<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_splash"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="@dimen/_120sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/facebook"
        android:textColor="#0463ca"
        android:textSize="@dimen/_17sdp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/tv_download"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/downloader"
        android:textColor="#0a2849"
        android:textSize="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_fb" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:gravity="center"
        android:text="@string/txt_des_splash"
        android:textColor="#9e9e9e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
