<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:fontFamily="@font/roboto_regular"
            android:paddingHorizontal="@dimen/_24sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/skip"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_32sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@+id/btn_skip" />

        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            app:dotsColor="@color/gray_D9"
            app:dotsCornerRadius="8dp"
            app:dotsSize="@dimen/_12sdp"
            app:dotsSpacing="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_next"
            app:progressMode="true"
            app:selectedDotColor="#055dbd" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_26sdp"
            android:background="@drawable/bg_core"
            android:paddingHorizontal="@dimen/_45sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/onboard_loading_ads_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="false"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading_ads_text"
            android:textColor="#000000" />
    </LinearLayout>
</FrameLayout>
