<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_background_home"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/bg_white"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:ellipsize="end"
                    android:hint="@string/txt_paste_the_link"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="#0a2849"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/paste"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/paste"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/ic_rectangle_18985"
                    android:ellipsize="end"
                    android:textIsSelectable="true"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingStart="@dimen/_6sdp"
                    android:singleLine="true"
                    android:text="@string/txt_paste"
                    android:textColor="#0a2849"
                    app:drawableStartCompat="@drawable/ic_paste"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:id="@+id/checklink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/ic_rectangle_18986"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:drawablePadding="@dimen/_6sdp"
                    android:paddingStart="@dimen/_8sdp"
                    android:text="@string/checlink"
                    android:textColor="#252e69"
                    android:textSize="@dimen/_12sdp"
                    app:drawableStartCompat="@drawable/ic_checklink" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"

                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/background"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/txt_information"
                        android:textColor="#252e69"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/view_result"
                        layout="@layout/layout_checlink_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/information" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/group_nodata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:constraint_referenced_ids="ic_nodata,tv_nodata" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_nodata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/ic_nodata_history"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.486"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/information" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_nodata"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/txt_nodata_information"
                        android:textColor="#9e9e9e"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.39"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ic_nodata" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="1.0" />



                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:id="@+id/native_ad_word_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_6sdp" />
    </LinearLayout>
</LinearLayout>
